--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -1189,13 +1189,13 @@ John also mentioned two good techniques, that should be noted:
     \item{Glass vial - none}
     \end{itemize}
   \end{itemize}
-\item[\done]{Count $\boxed{5\ Or}$ 3:00 pm - 7:00 pm (finally!!)}
+\item[\done]{Count $\boxed{5\ Or}$ 3:00 pm - 7:30 pm (finally!!)}
 \item{\st{Count $\boxed{7\ Aq}$ 9:00 pm - 11:00 pm} (Spilled)}
-\item{Count $\boxed{6\ Aq}$ 11:00 pm - 1:00 am}
-\item{Count $\boxed{5\ Aq}$ 1:00 am - 3:00 am}
+\item[\done]{Count $\boxed{6\ Aq}$ 7:00 pm - 9:00 pm}
+\item[\done]{Count $\boxed{5\ Aq}$ 9:00 pm - 8:00 am}
 \end{todolist}
 \begin{todolist}
-\item{-}
+\item[\done]{-}
 \end{todolist}
 \begin{center}
 0.0417+/-0.0018 ml of 2.302+/-0.009 M Fe(II) in 0.0+/-0 M HNO\tsbs{3} $\boxed{Stock\ Fe(II)}$\\
@@ -1205,56 +1205,52 @@ John also mentioned two good techniques, that should be noted:
 4.000+/-0.020 ml of 0.0240+/-0.0010 M Fe(II) in 4.00+/-0.05 M HNO\tsbs{3} solution $\boxed{\rightarrow Bk\ Ex\ Solution}$.
 \end{center}
 \begin{todolist}
-\item{Add XX $\mu$l Fe(II) solution to $\boxed{5\ Or}$}
-\item{Add XX $\mu$l Fe(II) solution to $\boxed{6\ Or}$}
+\item[\done]{Add 430 $\mu$l Fe(II) solution to $\boxed{5\ Or}$}
+\item[\done]{Add 430 $\mu$l Fe(II) solution to $\boxed{6\ Or}$}
 \item{\st{Add XX $\mu$l Fe(II) solution to $\boxed{7\ Or}$} (spilled)}
-\item{Shake $\boxed{5\ Or}$ 15 minutes on pulse mode}
-\item{Shake $\boxed{6\ Or}$ 15 minutes on pulse mode}
+\item[\done]{Shake $\boxed{5\ Or}$ 15 minutes on pulse mode}
+\item[\done]{Shake $\boxed{6\ Or}$ 15 minutes on pulse mode}
 \item{\st{Shake $\boxed{7\ Or}$ 15 minutes on pulse mode} (spilled)}
 \item{\st{Remove XX $\mu$l organic and XX $\mu$l aqueous
   from $\boxed{Ex\ Buddy}$} (No longer necessary)}
-\item{Centrifuge $\boxed{5\ Or}$, $\boxed{6\ Or}$, \st{$\boxed{7\ Or}$}
+\item[\done]{Centrifuge $\boxed{5\ Or}$, $\boxed{6\ Or}$, \st{$\boxed{7\ Or}$}
   \st{$\boxed{Ex\ Buddy}$}, 30,000 rpm for 5 minutes}
 \end{todolist}
 \begin{todolist}
-\item{Vials labeled $\boxed{5\ AqII}$, 
+\item[\done]{Vials labeled $\boxed{5\ AqII}$, 
   $\boxed{5\ OrII}$, $\boxed{6\ AqII}$, $\boxed{6\ OrII}$,
   \st{$\boxed{7\ AqII}$, $\boxed{7\ OrII}$}, transfered into
   glovebox}
-\item{Separate phases for samples}
+\item[\done]{Separate phases for samples}
   \begin{itemize}
-  \item{A total of XX drops were dropped in this process}
+  \item{A total of 1 drops were dropped in this process}
     \begin{enumerate}
-    %\item{Sample $\boxed{5}$ aqueous transfer}
-    %\item{Sample $\boxed{6}$ organic transfer}
-    \item{Sample $\boxed{XX}$ aqueous and organic transfer}
+    \item{Sample $\boxed{5\ Or}$ aqueous or organic transfer}
     \end{enumerate}
   \item{Using a variable pipette and the squish pipette,
-    as much of the top phase (organic) phase was removed as possible
-    (turns out to be around 450 $\mu$l and transfered to
+    as much of the bottom phase (aqueous) phase was removed as possible
+    and transfered to
     $\boxed{5\ OrII}$, $\boxed{6\ OrII}$, and \st{$\boxed{7\ OrII}$}.}
-  \item{Then as much of the bottom phase (aqueous) was removed as
-    possible (turns out to be around 430 $\mu$l) and transfered
+  \item{Then as much of the top phase (organic) was removed as
+    possible and transfered
     to $\boxed{5\ AqII}$, $\boxed{6\ AqII}$, and \st{$\boxed{7\ AqII}$}.}
   \end{itemize}
-\item{Measure Volumes of 9 vials (Aqueous, organic, and original
+\item[\done]{Measure Volumes of 9 vials (Aqueous, organic, and original
   - units in $\mu$l)}
 \end{todolist}
 \begin{center}
-  \begin{tabular}{||c c c c c||}
+  \begin{tabular}{||c c c c c c||}
     \hline
-    Series & Aqueous II & Organic II & Original II & Add to\\ [0.5ex]
+    Series & Aqueous II & Organic II & Original II & Should Add to
+    & Missing\\ [0.5ex]
     \hline\hline
-    5 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm}\\
+    5 & 407+/-8.14 & 380+/-7.6 & 38+/-5 & 860+/-12.2 & 35.0+/-17.2\\
     \hline
-    6 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm}\\
+    6 & \st{402}415+/-8.3 & \st{360}380+/-7.6 & 35+/-5 & 860+/-12.2
+    & 30+/-17.3\\
     \hline
   \end{tabular}
 \end{center}
-\begin{todolist}
-\item{Count Vials}
-\item{Analyze spectra}
-\end{todolist}
 
 \experiment{programs}
 
@@ -1271,6 +1267,24 @@ John also mentioned two good techniques, that should be noted:
   \end{equation*}
   where $\lambda$ is in seconds and $N_A$ is avogadros number.
 \end{todolist}
+
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Wednesday, 26 October 2016\\8:00 am}
+
+
+\experiment{Cycle_X3}
+
+\begin{todolist}
+\item{Finish count $\boxed{5\ Aq}$}
+\item{Count Vials}
+\item{Analyze spectra}
+\end{todolist}
+
 
 
 %----------------------------------------------------------------------
