--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -1444,7 +1444,42 @@ John also mentioned two good techniques, that should be noted:
 \item[\done]{Update laboratory notebook}
 \item{Determine calculation for alpha samples}
 \item{Outline project for UQ}
-\item{Meet with Dan Menchaka about rad stuff}
+\item[\done]{Meet with Dan Menchaka about rad stuff}
+  \begin{itemize}
+  \item{Called him on the phone}
+  \item{He said that swipes came back clean}
+  \item{That I could continue to decontaminate in the glovebox}
+  \end{itemize}
+\item[\done]{Installed uncertainties on windows computer}
+  \begin{itemize}
+  \item{Go to start menu}
+  \item{cmd, run in administrator mode}
+  \item{type\_path\_to\_pip install package}
+  \end{itemize}
+\item[\done]{Automated copy paste from Gamma\_Template to excel
+  sheet}
+\end{todolist}
+
+\experiment{Cycle_X3}
+
+\begin{todolist}
+\item[\done]{Finish counting $\boxed{6\ AqII}$}
+\item[\done]{Start counting $\boxed{5\ AqII}$}
+\end{todolist}
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Friday, 28 October 2016}
+
+\experiment{Cycle_X3}
+
+\begin{todolist}
+\item{Clean contamination in glovebox}
+\item{Finish count $\boxed{5\ AqII}$}
+\item{Start count $\boxed{6\ OrII}$}
+\item{Continue counting vials from experiment}
 \end{todolist}
 
 
