--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -94,6 +94,8 @@
 \newexperiment{Cycle_X3}{Cycle experiment, replicate of 3}
 \newexperiment{programs}{Calculation Work}
 \newexperiment{Contamination}{Contamination spill 10/25/16}
+\newexperiment{Contamination2}{Minor Contamination of HPGe,
+  found Monday 10/31/2016}
 \newexperiment{ResearchMeeting}{Details from research meeting}
 %\newexperiment{shorthand}{Description of the experiment}
 
@@ -1476,12 +1478,41 @@ John also mentioned two good techniques, that should be noted:
 \experiment{Cycle_X3}
 
 \begin{todolist}
-\item{Clean contamination in glovebox}
-\item{Finish count $\boxed{5\ AqII}$}
-\item{Start count $\boxed{6\ OrII}$}
-\item{Continue counting vials from experiment}
+\item[\done]{Clean contamination in glovebox}
+\item[\done]{Finish count $\boxed{5\ AqII}$}
+\item[\done]{Start background count}
+\item[\done]{Go home, not feeling well}
 \end{todolist}
 
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Monday, 31 October 2016}
+
+\experiment{Cycle_X3}
+\begin{todolist}
+\item[\done]{Start Efficiency Count with Eu-152 Liquid source}
+\item[\done]{Stop Efficiency count once contamination was found
+  need to clean HPGe}
+\end{todolist}
+
+\experiment{Contamination}
+\begin{todolist}
+\item[\done]{Luis Gonzolas and Daniel Menchaca both came by around
+  10:00 am to take swipes around the antechamber}
+  \begin{itemize}
+  \item{They said they would get results after lunch}
+  \end{itemize}
+\end{todolist}
+
+\experiment{Contamination2}
+
+\begin{todolist}
+\item{Clean all vials and containers outside glovebox}
+\item{Clean HPGe, reduce background contamination}
+\end{todolist}
 
 %----------------------------------------------------------------------
 %	Examples
