--- a/Notebook/Incident/proposal.tex
+++ b/Notebook/Incident/proposal.tex
@@ -9,9 +9,18 @@
 \usepackage[top=0.7in,bottom=1in,left=1in,right=1in]{geometry}
 \pagestyle{empty} % Remove page numbering
 \usepackage{float}
+\usepackage{siunitx}
 \newcommand{\tss}{\textsuperscript}
 \newcommand{\tsbs}{\textsubscript}
 \hyphenation{ionto-pho-re-tic iso-tro-pic fortran} % Specifies custom hyphenation points for words or words that shouldn't be hyphenated at all
+
+%\sisetup{input-symbols ={()}, %do not treat ``(`` in tables differentl
+%         group-digits = false}
+\sisetup{
+  per-mode = symbol,
+  output-decimal-marker = {.},
+  range-units = brackets,
+  }
 
 \renewcommand{\thesection}{\Roman{section}}
 
@@ -47,27 +56,33 @@ Table \ref{fig:activities}.
 \end{figure}
 
 \begin{table}[H]
-\begin{center}
-  \begin{tabular}{|c c c c|}
+  \begin{center}
+    \caption{Activities in the two vials}
+    
+  \begin{tabular}{|c S[table-format=1.3] S[table-format=1.3] S[table-format=1.5] S[table-format=1.5] S[table-format=1.3] S[table-format=1.3]|}
     \hline
-    Isotope & HNO\tsbs{3} ($\mu$Ci)
-    & TBP ($\mu$Ci)
-    & Estimated Total ($\mu$Ci)\\ [0.5ex]
+    Isotope
+    & {HNO\tsbs{3} [$\mu$Ci]}
+    & {$\pm$}
+    & {TBP [$\mu$Ci]}
+    & {$\pm$}
+    & {Estimated Total [$\mu$Ci]}
+    &  {$\pm$}
+    \\
     \hline\hline
-    \tss{144}Ce & 5.70+/-0.06 & 0.118+/-0.003 & 5.82+/-0.06\\
+    \tss{144}Ce & 5.70 & 0.06 & 0.118 & 0.003 & 5.82 & 0.06\\
     \hline
-    \tss{154}Eu & 0.054+/-0.002 & 0.0033+/-0.0002 & 0.057+/-0.002\\
+    \tss{154}Eu & 0.054 & 0.002 & 0.0033 & 0.0002 & 0.057 & 0.002\\
     \hline
-    \tss{125}Sb & 0.24+/-0.01 & 0.0007+/-0.0006 & 0.24+/-0.01\\
+    \tss{125}Sb & 0.24 & 0.01 & 0.0007 & 0.0006 & 0.24 & 0.01\\
     \hline
-    \tss{106}Rh & 6.3+/-0.3 & 0.240+/-0.005 & 6.5+/-0.4\\
+    \tss{106}Rh & 6.3 & 0.3 & 0.240 & 0.005 & 6.5 & 0.4\\
     \hline
-    \tss{134}Cs & 0.359+/-0.01 & 0.00018+/-0.00006 & 0.36+/-0.01\\
+    \tss{134}Cs & 0.359 & 0.01 & 0.00018 & 0.00006 & 0.36 & 0.01\\
     \hline
-    \tss{137}Cs & 4.58+/-0.1 & 0.0162+/-0.0001 & 4.6+/-0.1\\
+    \tss{137}Cs & 4.58 & 0.1 & 0.0162 & 0.0001 & 4.6 & 0.1\\
     \hline
   \end{tabular}
-  \caption{Activities in the two vials}
   \label{fig:activities}
 \end{center}
 \end{table}
