--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -1475,11 +1475,40 @@ John also mentioned two good techniques, that should be noted:
 
 \labday{Friday, 28 October 2016}
 
-\experiment{Cycle_X3}
+\experiment{Contamination}
 
 \begin{todolist}
 \item[\done]{Clean contamination in glovebox}
+  \begin{itemize}
+  \item{Swipe L Shoe - clean}
+  \item{Swipe R Shoe - clean}
+  \item{Swipe Top    - clean}
+  \item{Swipe Left Right Mid plane - clean}
+  \item{Swipe around the top back portion - clean}
+  \item{Swipe Back bottom - clean}
+  \end{itemize}
+\end{todolist}
+
+\experiment{Cycle_X3}
+
+\begin{todolist}
 \item[\done]{Finish count $\boxed{5\ AqII}$}
+\item[\done]{Checked math with John Burns}
+  \begin{itemize}
+  \item{The math was correct, but we noticed that
+    Series 6 had larger D-values accros the board}
+  \item{If we assume a 10 $\mu$l contamination
+    of aqueous in the organic (a very small amount),
+    the D-values line up a lot better}
+    \begin{itemize}
+    \item{Eu-155 0.07 to 0.049 \done}
+    \item{Eu-155 0.09 to 0.073 \wontfix}
+    \item{Eu-154 0.095 to 0.073 \wontfix}
+    \item{Ce-144 0.045 to 0.022 \done}
+    \item{Rh     0.067 to 0.045 \done}
+    \item{Cs-137 0.024 to 0.001 \done}
+    \end{itemize}
+  \end{itemize}
 \item[\done]{Start background count}
 \item[\done]{Go home, not feeling well}
 \end{todolist}
@@ -1505,13 +1534,54 @@ John also mentioned two good techniques, that should be noted:
   \begin{itemize}
   \item{They said they would get results after lunch}
   \end{itemize}
+\item[\done]{Write up small report about contamination leak
+  and give to Latha}
+  \begin{itemize}
+  \item{Assumed 90\% of the 7 series in the antechamber, and the
+    other 10\% is in the original 7 vial that wasn't spilled}
+  \end{itemize}
 \end{todolist}
 
 \experiment{Contamination2}
 
 \begin{todolist}
-\item{Clean all vials and containers outside glovebox}
-\item{Clean HPGe, reduce background contamination}
+\item[\done]{Clean HPGe, reduce background contamination}
+  \begin{itemize}
+  \item{Clean all bricks}
+  \item{Count with bricks in different configurations}
+  \item{Found that source is coming from radiation storage closet}
+  \end{itemize}
+\item[\done]{Ask Troy if he moved sources around in closet,
+  or if anyone did}
+  \begin{itemize}
+  \item{He did say that someone moved stuff around}
+  \item{Shielded our source (probably strongest source around)}
+  \end{itemize}
+\item[\done]{Recount background, still high on Cs-137 source...}
+\item[\done]{Ask Marianno for doubloon reward...and if he aquired
+  any sources recently, he said he did, he got 1.3 or so mCi of
+  \tss{137}Cs...that would explain it, I asked which day
+  he got the source, to know when to subtract out the background
+  from my samples...he said he would check}
+\item[\done]{This took a large portion of the day}
+\end{todolist}
+
+\begin{center}
+  Dig around the roots\\
+  Grace and Truth \\
+  Next season will come
+\end{center}
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Tuesday, 1 November 2016}
+
+\experiment{Contamination2}
+
+\begin{todolist}
+\item{Clean all vials}
 \end{todolist}
 
 %----------------------------------------------------------------------
