--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -1535,7 +1535,7 @@ John also mentioned two good techniques, that should be noted:
   \item{They said they would get results after lunch}
   \end{itemize}
 \item[\done]{Write up small report about contamination leak
-  and give to Latha}
+  and give to Latha, in subdirectory ``Indicent''}
   \begin{itemize}
   \item{Assumed 90\% of the 7 series in the antechamber, and the
     other 10\% is in the original 7 vial that wasn't spilled}
@@ -1578,10 +1578,50 @@ John also mentioned two good techniques, that should be noted:
 
 \labday{Tuesday, 1 November 2016}
 
+\experiment{Contamination}
+\begin{todolist}
+\item[\done]{Dr. Latha Vasudevan contacted with questions,
+  responded as well as I could}
+  \begin{itemize}
+  \item{She said no more experiments until waste could be picked up}
+  \item{She said that vials should be in its own box}
+  \end{itemize}
+\item[\done]{Contacted EHS about Waste pickup, but need the PI's username
+  and password}
+  \begin{itemize}
+  \item{Sorry Dr. Folden, but I need to bother you about this}
+  \end{itemize}
+  \begin{enumerate}
+  \item{Start at EHS Website}
+    \begin{itemize}
+    \item{Safety Tab $\rightarrow$ Radiological Safety}
+    \item{Request Waste Pickup (link)}
+    \item{Link for request at bottom of page}
+    \end{itemize}
+  \item{Activities should be corrected to the date the smaple was
+    added to the license, assume the date to be May 5th, 2014}
+  \item{License number is 933}
+  \item{Last time 0.0076 mCi removed, 0.66267 remains}
+  \end{enumerate}
+\end{todolist}
+
 \experiment{Contamination2}
 
 \begin{todolist}
-\item{Clean all vials}
+\item[\done]{Got Dr. Mariannos source list, last time he got
+  \tss{137}Cs, was in September, not during the time of our
+  experiment - he did say that sources were moved around
+  two weeks ago on Thursday}
+\item[\done]{Calculation for MDA - Modify pages 96-98 from Knoll to do
+  in terms of CPS, not total counts}
+  \begin{itemize}
+  \item{Also looked at Ludlums calculation
+    \href{http://www.ludlums.com/multisites/medphys/images/stories/news_letters/nwsltr-43re.pdf}{Ludlum}}
+  \item{Created a Excel Sheet for example calculations with equations}
+  \end{itemize}
+\item[\done]{Marianno said that he shielded the \tss{137}Cs}
+\item[\done]{Started a new background count}
+\item{\st{Clean all vials}}
 \end{todolist}
 
 %----------------------------------------------------------------------
