--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -1621,8 +1621,32 @@ John also mentioned two good techniques, that should be noted:
   \end{itemize}
 \item[\done]{Marianno said that he shielded the \tss{137}Cs}
 \item[\done]{Started a new background count}
-\item{\st{Clean all vials}}
+  \begin{itemize}
+  \item{It does look like he shielded \tss{137}Cs}
+  \end{itemize}
+\item{Clean all vials}
 \end{todolist}
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Wednesday, 2 November 2016}
+
+\experiment{Cycle_X3}
+\begin{todolist}
+\item[\done]{Finish background count}
+\item[\done]{Start Efficiency Count with Eu-152 Liquid source,
+  again (on Monday we found the \tss{137}Cs higher
+  background)}
+\item{Background corrections for all calculations}
+\item{Assuming 10$\mu$l contamination what are D-values}
+\item{Make Easy to read power point}
+\item{Automate Decay corrections}
+\end{todolist}
+
+
+
 
 %----------------------------------------------------------------------
 %	Examples
