--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -97,6 +97,8 @@
 \newexperiment{Contamination2}{Minor Contamination of HPGe,
   found Monday 10/31/2016}
 \newexperiment{ResearchMeeting}{Details from research meeting}
+\newexperiment{Cycle_X3_round_2}{Cycle experiment, round 2,
+  replicate of 3}
 %\newexperiment{shorthand}{Description of the experiment}
 
 %----------------------------------------------------------------------
@@ -1654,7 +1656,7 @@ John also mentioned two good techniques, that should be noted:
   gave same answer, but slightly larger error, I guess I'll have
   to abandon that type of calculation.}
 \item{Make Easy to read power point}
-\item{Automate Decay corrections}
+\item[\done]{Automate Decay corrections}
 \end{todolist}
 
 \experiment{ResearchMeeting}
@@ -1722,16 +1724,97 @@ John also mentioned two good techniques, that should be noted:
   an earlier stage, like in the CPS arena, which would take a lot
   more work - honestly I don't think it will change things much,
   probably the same about as above}
+\item[\done]{Automate background correction}
+  \begin{itemize}
+  \item{Will do background correction based on most recent background}
+  \item{Should probably change to search for a background date}
+  \item{Okay now changed to search for a specific background date}
+  \end{itemize}
+\item[\done]{Automate Decay corrections}
 \end{todolist}
 
 \experiment{Contamination}
 
 \begin{todolist}
-\item{Called EHS, no response, found old waste dissposal sheet,
-  filling it in}
-\item{Looking for Waste Dissposal Report Form}
+\item[\done]{Called EHS, no response, found old waste dissposal sheet,
+  filled it in}
+\item[\done]{Called Innocent, he said he would come, please come!}
+\item[\done]{EHS came! Thank you Innocent, he picked up the waste,
+  took the sheet, and gave us new waste bags}
 \end{todolist}
 
+\experiment{Cycle_X3_round_2}
+
+\begin{todolist}
+\item[\done]{Aaron Kruger let me into the Radiation
+  source closet (so I can get more sample)}
+  \begin{itemize}
+  \item{Grabed our source, stored in the back of lab with shielding}
+  \end{itemize}
+\item[\done]{Complete \tss{152}Eu count}
+\item[\done]{Start background (make sure things are okay)}
+\item{Transfer $\boxed{closet}$ into glovebox}
+\item{-}
+\end{todolist}
+\begin{center}
+    0.149+/-0.011 ml of 15.43+/-0.06 M HNO\tsbs{3} $\boxed{Stock\ HNO_3}$\\
+    +\\
+    1.91+/-0.08  ml of 0.0+/-0 M solution $\boxed{DI\ Water}$\\
+    = \\
+    2.048+/-0.026 ml of 1.12+/-0.08 M HNO\tsbs{3}
+  solution $\boxed{\rightarrow Stock\ Add}$ (glass container)
+\end{center}
+\begin{todolist}
+\item{-}
+\end{todolist}
+\begin{center}
+Combine 0.500+/-0.005 ml of 15.43+/-0.06 M HNO\tsbs{3}
+solution $\boxed{closet}$\\
++\\
+2.048+/-0.026 ml of 1.12+/-0.08 M HNO\tsbs{3} solution
+$\boxed{Stock\ Add}$
+\\
+=\\
+2.500+/-0.025 ml of 4.00+/-0.05 M HNO\tsbs{3} solution.
+$\boxed{\rightarrow Stock\ Add}$
+\end{center}
+\begin{todolist}
+\item{-}
+\end{todolist}
+\begin{center}
+Combine 2.500+/-0.025 ml of 4.00+/-0.05 M HNO\tsbs{3} solution.
+$\boxed{Stock\ Add}$\\
++\\
+0.700+/-0.028 ml of 4.00+/-0.05 M HNO\tsbs{3} solution
+$\boxed{Stock}$
+\\
+=\\
+3.2+/-0.038 ml of 4.00+/-0.05 M HNO\tsbs{3} solution.
+$\boxed{\rightarrow Stock}$
+\end{center}
+\begin{todolist}
+\item{Transfer $\boxed{closet}$ out of glovebox}
+\item{Create $\boxed{Buddy}$ with 4 ml of 4 M HNO\tsbs{3}
+     solution}
+\item{Create and label vials $\boxed{8}$, $\boxed{9}$,
+  $\boxed{10}$, and $\boxed{Buddy}$, to hold stock solution.
+  Did not leech them,
+  hopefully barium contamination wont be a huge deal,
+  we will assume all the data for Cs can be gathered from \tss{133}Cs.
+  also, still using smaller vials, but will make sure to have
+  double containment for transfer into glovebox}
+\item{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{8}$}
+\item{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{9}$}
+\item{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{10}$}
+\item{Add scoop of sodium nitrite to $\boxed{8}$}
+\item{Add scoop of sodium nitrite to $\boxed{9}$}
+\item{Add scoop of sodium nitrite to $\boxed{10}$}
+\item{Centrifuged $\boxed{8}$, $\boxed{9}$
+  and $\boxed{10}$ to push all solution to
+  botttom of vials}
+\item{Start count of $\boxed{8}$ noticed bubbles in solution,
+  might have to recount - left overnight}
+\end{todolist}
 
 
 %----------------------------------------------------------------------
